performance(jewelry listing): implement pages in lists to increase performance